--- a/build.gradle
+++ b/build.gradle
@@ -39,16 +39,24 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    // Testcontainers Core
+    testImplementation 'org.testcontainers:testcontainers'
+    // MySQL용 Testcontainers
+    testImplementation 'org.testcontainers:mysql'
+    // JUnit 5 통합
+    testImplementation 'org.testcontainers:junit-jupiter'
 }
 
 
 ext {
     set('springCloudVersion', "2023.0.3")
+    set('testcontainersVersion', "1.19.0")
 }
 
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"  // Spring Cloud BOM 버전 관리
+        mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
     }
 }
 
