--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
     import: "optional:configserver:"
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: http://192.168.0.12:8888
       request-connect-timeout: 5000
       request-read-timeout: 5000
       fail-fast: true
@@ -24,7 +24,7 @@ spring:
         max-interval: 2000
         multiplier: 1.1
   datasource:
-    url: jdbc:mysql://192.168.0.5:3307/catalog?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
+    url: jdbc:mysql://polar-mysql:3307/catalog?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 1234
