--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,19 +10,22 @@ server:
 spring:
   application:
     name: catalog-service
-  config:
-    import: "optional:configserver:"
   cloud:
     config:
-      uri: http://192.168.0.12:8888
-      request-connect-timeout: 5000
-      request-read-timeout: 5000
-      fail-fast: true
-      retry:
-        max-attempts: 6
-        initial-interval: 1000
-        max-interval: 2000
-        multiplier: 1.1
+      enabled: false
+  #  config:
+#    import: "optional:configserver:"
+#  cloud:
+#    config:
+#      uri: http://config-service:8888
+#      request-connect-timeout: 5000
+#      request-read-timeout: 5000
+#      fail-fast: true
+#      retry:
+#        max-attempts: 6
+#        initial-interval: 1000
+#        max-interval: 2000
+#        multiplier: 1.1
   datasource:
     url: jdbc:mysql://polar-mysql:3307/catalog?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
     driver-class-name: com.mysql.cj.jdbc.Driver
