--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,11 @@ spring:
 #  cloud:
 #    config:
 #      enabled: false
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: user
+    password: 1234
   lifecycle:
     timeout-per-shutdown-phase: 15s
   config:
@@ -29,6 +34,7 @@ spring:
         initial-interval: 1000
         max-interval: 2000
         multiplier: 1.1
+      enabled: false
   datasource:
     url: ${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3307/catalog?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8}
     driver-class-name: com.mysql.cj.jdbc.Driver
